Rework project navbar to fix spacing issues Closes #63

--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -173,15 +173,6 @@ body {
     margin-top: 60px;
     border-bottom: 1px solid #ddd;
     margin-bottom: 15px;
-    height: 60px;
-}
-
-.project-header-container > div {
-    height: 60px;
-}
-
-.project-controls {
-    margin-top: 15px;
 }
 
 .btn-version {
@@ -189,10 +180,43 @@ body {
 }
 
 .project-header {
+    padding-top: 20px;
+    padding-bottom: 10px;
+    display: table;
+    white-space: nowrap;
+}
+
+.project-header > h1 {
+    padding-right: 10px;
+    display: table-cell;
     font-size: 20px;
     font-weight: normal;
-    margin-top: 20px;
-    margin-right: 15px;
+}
+
+.project-header > i {
+    display: table-cell;
+    font-size: 16px;
+    max-width: 950px;
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
+
+.row-nav .col-md-12 {
+    padding-left: 0;
+}
+
+.row-nav .project-controls {
+
+}
+
+.row-nav .navbar {
+    min-height: 35px;
+    padding: 0;
+}
+
+.row-nav  .navbar-nav > li > a {
+    padding-top: 5px; !important;
+    padding-bottom: 10px; !important;
 }
 
 .project-navbar {
@@ -201,7 +225,6 @@ body {
     -moz-border-radius: 0;
     border-radius: 0;
     margin: 0;
-    height: 60px;
 }
 
 .project-navbar, .project-navbar:hover, .project-navbar > .navbar-inner > .navbar-nav > .active > a {
@@ -210,11 +233,6 @@ body {
 
 .project-navbar > .navbar-inner li.active > a {
     border-bottom: 1px solid black;
-}
-
-.project-navbar > .navbar-inner > ul > li > a {
-    padding-top: 22px; !important;
-    height: 60px; !important;
 }
 
 .channel {
@@ -566,11 +584,6 @@ form {
 
 a > .fa {
     cursor: pointer; !important;
-}
-
-.container-project-nav {
-    padding-left: 50px;
-    padding-right: 50px;
 }
 
 .table-members .input-group {
